third major update

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@tiptap/pm": "^2.23.0",
     "@tiptap/react": "^2.23.0",
     "@tiptap/starter-kit": "^2.23.0",
+    "dotenv": "^17.2.0",
     "firebase": "^11.10.0",
     "i": "^0.3.7",
     "npm": "^11.4.2",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-resizable-panels": "^3.0.3",
