--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^17.2.0",
     "firebase": "^11.10.0",
     "i": "^0.3.7",
+    "lodash.debounce": "^4.0.8",
     "npm": "^11.4.2",
     "process": "^0.11.10",
     "react": "^19.1.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
