--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
-keras==3.3.3
+keras>=3.0.0,<3.3.0
 kiwisolver==1.4.8
 langchain==0.3.26
 langchain-anthropic==0.3.16
@@ -53,22 +53,22 @@ langgraph-sdk==0.1.70
 langsmith==0.3.45
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.3
+matplotlib==3.8.4
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml-dtypes==0.4.0
+ml-dtypes==0.3.2
 mpmath==1.3.0
 namex==0.0.8
 nest-asyncio==1.6.0
 networkx==3.5
-numpy==1.26.4
+numpy>=1.26.0,<2.0.0
 openai==1.84.0
 opencv-python==4.11.0.86
 optree==0.11.0
 orjson==3.10.18
 ormsgpack==1.10.0
 packaging==24.2
-pandas==2.3.0
+pandas==2.2.2
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.2.1
@@ -94,7 +94,7 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rich==14.0.0
 rich-toolkit==0.14.7
-scipy==1.15.3
+scipy==1.13.1
 setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
@@ -105,8 +105,8 @@ starlette==0.46.2
 sympy==1.14.0
 tenacity==9.1.2
 tiktoken==0.9.0
-torch==2.7.1
-torchvision==0.22.1
+torch>=2.0.0,<2.7.0
+torchvision>=0.15.0,<0.22.0
 tornado==6.4
 tqdm==4.67.1
 traitlets==5.14.3
