--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ fsspec==2024.12.0
 geographiclib==2.0
 geopy==2.4.1
 h11==0.14.0
-h5py==3.12.1
+h5py==3.11.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.27.2
@@ -39,7 +39,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
-keras==3.8.0
+tensorflow==2.15.0
 kiwisolver==1.4.7
 langchain==0.3.26
 langchain-anthropic==0.3.17
@@ -56,12 +56,11 @@ MarkupSafe==3.0.2
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml-dtypes==0.5.0
 mpmath==1.3.0
 namex==0.0.8
 nest-asyncio==1.6.0
 networkx==3.4.2
-numpy==2.1.3
+numpy==1.24.4
 openai==1.57.2
 opencv-python==4.10.0.84
 optree==0.12.0
@@ -94,7 +93,7 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rich==13.9.4
 rich-toolkit==0.14.7
-scipy==1.14.1
+scipy==1.12.0
 setuptools==75.6.0
 shellingham==1.5.4
 six==1.16.0
@@ -105,8 +104,8 @@ starlette==0.41.3
 sympy==1.13.3
 tenacity==9.0.0
 tiktoken==0.8.0
-torch==2.4.1
-torchvision==0.19.1
+torch==2.1.2
+torchvision==0.16.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
@@ -114,7 +113,7 @@ typer==0.15.1
 typing-inspection==0.4.1
 typing_extensions==4.12.2
 tzdata==2024.2
-ultralytics==8.3.42
+ultralytics==8.1.47
 ultralytics-thop==2.0.14
 urllib3==2.2.3
 uvicorn==0.32.1
