--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ tensorflow==2.15.0
 kiwisolver==1.4.7
 langchain==0.3.26
 langchain-anthropic==0.3.17
-langchain-core==0.3.67
+langchain-core>=0.3.68
 langchain-openai==0.3.21
 langchain-text-splitters==0.3.8
 langgraph==0.4.8
