--- a/requirements.txt
+++ b/requirements.txt
@@ -61,11 +61,11 @@ namex==0.0.8
 nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==1.24.4
-openai==1.57.2
+openai>=1.68.2,<2.0.0
 opencv-python==4.10.0.84
 optree==0.12.0
 orjson==3.10.12
-ormsgpack==1.6.0
+ormsgpack
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
