--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,49 @@
 absl-py==2.1.0
 annotated-types==0.7.0
-anthropic>=0.57.0,<1.0
-anyio==4.6.2
+anthropic==0.55.0
+anyio==4.9.0
 appnope==0.1.4
 asttokens==2.4.1
-autopep8==2.3.1
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
+autopep8==2.1.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
 comm==0.2.2
-contourpy==1.3.1
+contourpy==1.3.2
 cycler==0.12.1
-debugpy==1.8.8
+debugpy==1.8.1
 decorator==5.1.1
 distro==1.9.0
 dnspython==2.7.0
 email_validator==2.2.0
-executing==2.1.0
-fastapi==0.115.5
-fastapi-cli==0.0.5
-filelock==3.16.1
-fonttools==4.55.3
-fsspec==2024.12.0
+executing==2.0.1
+fastapi==0.115.12
+fastapi-cli==0.0.7
+filelock==3.18.0
+fonttools==4.58.2
+fsspec==2025.5.1
 geographiclib==2.0
 geopy==2.4.1
-h11==0.14.0
+h11==0.16.0
 h5py==3.11.0
-httpcore==1.0.7
+httpcore==1.0.9
 httptools==0.6.4
-httpx==0.27.2
+httpx==0.28.1
 idna==3.10
-ipykernel==6.29.5
-ipython==8.30.0
-jedi==0.19.2
-Jinja2==3.1.4
-jiter==0.8.2
+ipykernel==6.29.4
+ipython==8.24.0
+jedi==0.19.1
+Jinja2==3.1.6
+jiter==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-jupyter_client==8.6.3
+jupyter_client==8.6.1
 jupyter_core==5.7.2
-tensorflow==2.15.0
-kiwisolver==1.4.7
+keras==3.3.3
+kiwisolver==1.4.8
 langchain==0.3.26
-langchain-anthropic==0.3.17
-langchain-core>=0.3.68
+langchain-anthropic==0.3.16
+langchain-core==0.3.67
 langchain-openai==0.3.21
 langchain-text-splitters==0.3.8
 langgraph==0.4.8
@@ -53,73 +53,74 @@ langgraph-sdk==0.1.70
 langsmith==0.3.45
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.9.3
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+ml-dtypes==0.4.0
 mpmath==1.3.0
 namex==0.0.8
 nest-asyncio==1.6.0
-networkx==3.4.2
-numpy==1.24.4
-openai>=1.68.2,<2.0.0
-opencv-python==4.10.0.84
-optree==0.12.0
-orjson==3.10.12
-ormsgpack
+networkx==3.5
+numpy==2.3.0
+openai==1.84.0
+opencv-python==4.11.0.86
+optree==0.11.0
+orjson==3.10.18
+ormsgpack==1.10.0
 packaging==24.2
-pandas==2.2.3
+pandas==2.3.0
 parso==0.8.4
 pexpect==4.9.0
-pillow==11.0.0
-platformdirs==4.3.6
-prompt-toolkit==3.0.48
-psutil==6.1.0
+pillow==11.2.1
+platformdirs==4.2.2
+prompt-toolkit==3.0.43
+psutil==7.0.0
 ptyprocess==0.7.0
-pure-eval==0.2.3
+pure-eval==0.2.2
 py-cpuinfo==9.0.0
-pycodestyle==2.12.1
-pydantic==2.10.3
-pydantic_core==2.27.1
-Pygments==2.18.0
-pyparsing==3.2.0
+pycodestyle==2.11.1
+pydantic==2.11.5
+pydantic_core==2.33.2
+Pygments==2.19.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+python-dotenv==1.1.0
 python-multipart==0.0.20
-pytz==2024.2
+pytz==2025.2
 PyYAML==6.0.2
-pyzmq==26.2.0
+pyzmq==26.0.3
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
-rich==13.9.4
+rich==14.0.0
 rich-toolkit==0.14.7
-scipy==1.12.0
-setuptools==75.6.0
+scipy==1.15.3
+setuptools==80.9.0
 shellingham==1.5.4
-six==1.16.0
+six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.36
+SQLAlchemy==2.0.41
 stack-data==0.6.3
-starlette==0.41.3
-sympy==1.13.3
-tenacity==9.0.0
-tiktoken==0.8.0
-torch==2.1.2
-torchvision==0.16.2
-tornado==6.4.2
+starlette==0.46.2
+sympy==1.14.0
+tenacity==9.1.2
+tiktoken==0.9.0
+torch==2.7.1
+torchvision==0.22.1
+tornado==6.4
 tqdm==4.67.1
 traitlets==5.14.3
-typer==0.15.1
+typer==0.16.0
 typing-inspection==0.4.1
-typing_extensions==4.12.2
-tzdata==2024.2
-ultralytics==8.1.47
+typing_extensions==4.14.0
+tzdata==2025.2
+ultralytics==8.3.152
 ultralytics-thop==2.0.14
-urllib3==2.2.3
-uvicorn==0.32.1
+urllib3==2.4.0
+uvicorn==0.34.3
 uvloop==0.21.0
-watchfiles==1.0.0
+watchfiles==1.0.5
 wcwidth==0.2.13
-websockets==14.1
+websockets==15.0.1
 xxhash==3.5.0
 zstandard==0.23.0
