--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start": "concurrently \"npm run backend\" \"npm run frontend\" "
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.23.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
@@ -30,12 +33,15 @@
     "concurrently": "^9.2.0",
     "dotenv": "^17.2.0",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.9",
     "i": "^0.3.7",
     "lodash.debounce": "^4.0.8",
+    "next-themes": "^0.4.6",
     "npm": "^11.4.2",
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.6.3"
   },
@@ -52,6 +58,7 @@
     "globals": "^16.2.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
