--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tiptap/pm": "^2.23.0",
     "@tiptap/react": "^2.23.0",
     "@tiptap/starter-kit": "^2.23.0",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "concurrently": "^9.2.0",
     "dotenv": "^17.2.0",
