--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ anthropic==0.55.0
 anyio==4.9.0
 appnope==0.1.4
 asttokens==2.4.1
+asyncio==3.4.3
 autopep8==2.1.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
