--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "npm": "^11.4.2",
     "process": "^0.11.10",
     "react": "^19.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.3",
